[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvision-ai"
version = "1.0.0"
description = "MedVision AI: Medical Imaging Diagnostic Assistant — AI-powered DICOM analysis, anomaly detection, and structured radiology reporting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "lanekingkong", email = "lanekingkong@github.com"},
]
keywords = [
    "medical-imaging",
    "dicom",
    "radiology",
    "deep-learning",
    "anomaly-detection",
    "computer-vision",
    "healthcare-ai",
    "segmentation",
    "classification",
    "report-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydicom>=2.4.0",
    "nibabel>=5.2.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.3.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.22.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
]
ai = [
    "torch>=2.0.0",
    "torchvision>=0.17.0",
    "monai>=1.3.0",
    "transformers>=4.35.0",
    "albumentations>=1.4.0",
]
segmentation = [
    "segmentation-models-pytorch>=0.3.0",
    "connected-components-3d>=3.14.0",
]

[project.scripts]
medvision = "medvision.cli:cli"

[project.urls]
Homepage = "https://github.com/lanekingkong/medvision-ai"
Documentation = "https://github.com/lanekingkong/medvision-ai/blob/main/README.md"
Issues = "https://github.com/lanekingkong/medvision-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
